--- a/Hanson_Exercise8_2.ipynb
+++ b/Hanson_Exercise8_2.ipynb
@@ -30,7 +30,7 @@
     "# 1. Solving a System of Linear Equations\n",
     "\n",
     "A = np.array([[27, -10, 4, -29], [-16, 5, -2, 18], [-17, 4, -2, 20], [-7, 2, 1, 8]])\n",
-    "B = np.array([1, -1, 0, 1])\n",
+    "B = np.array([[1], [-1], [0], [1]])\n",
     "result = np.linalg.solve(A, B)\n",
     "print(result)"
    ]
